--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.3",
     "astro-i18next": "^1.0.0-beta.21",
+    "astro-icon": "^1.1.0",
+    "i18next": "^22.4.10",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2",
-    "i18next": "^22.4.10"
+    "typescript": "^5.5.2"
   }
 }
