--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "i18n": "npx astro-i18next generate"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
+    "@astrojs/check": "^0.9.1",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.11.3",
+    "astro": "^4.12.3",
     "astro-i18next": "^1.0.0-beta.21",
     "astro-icon": "^1.1.0",
+    "astro-navbar": "^2.3.3",
     "i18next": "^22.4.10",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
