feat: add prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,9 @@
 {
-  "tabWidth": 4,
-  "useTabs": false,
-  "singleQuote": false,
-  "plugins": ["prettier-plugin-astro"],
-  "overrides": [
-    {
-      "files": "*.astro",
-      "options": {
-        "parser": "astro",
-        "useTabs": true
-      }
-    }
-  ]
+  "useTabs": true,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "semi": false,
+  "printWidth": 100,
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false
 }
