--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.3",
     "i18next": "^22.4.10",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.9.0",
+    "eslint-plugin-astro": "^1.2.3",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
