--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-      "baseUrl": ".",
-      "plugins": [
-          {
-              "name": "@astrojs/ts-plugin"
-          }
-      ],
-      "paths": {
-          "@/*": ["src/*"],
+    "baseUrl": ".",
+    "plugins": [
+      {
+        "name": "@astrojs/ts-plugin"
       }
+    ],
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
